[package]
name = "mcping"
version = "0.1.0"
authors = ["Scetch <lucierbrandon@gmail.com>"]

[dependencies]
base64 = "0.9.0"
byteorder = "1.2.1"
dns-lookup = "0.9.0"
failure = "0.1.1"
failure_derive = "0.1.1"
itertools = "0.7.6"
rand = "0.4.2"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
serenity = { git = "https://github.com/zeyla/serenity.git", rev="7e0d908" }
toml = "0.4.5"