[package]
name = "mcping"
version = "0.1.2"
license = "MIT OR Apache-2.0"
authors = ["Scetch <me@scet.ch>", "Cldfire <cldfire3@gmail.com>"]
description = "Implementation of the Server List Ping (SLP) part of the Minecraft Modern protocol"
keywords = ["minecraft", "ping", "server", "serverlistping", "status"]
categories = ["api-bindings", "game-development", "network-programming"]
repository = "https://github.com/Scetch/mcping"
edition = "2018"

[dependencies]
byteorder = "1.3"
rand = "0.7"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
thiserror = "1.0"
trust-dns-resolver = "0.19"

[dev-dependencies]
dialoguer = "0.7"
mc-legacy-formatting = "0.2"
viuer = "0.1"
base64 = "0.13"
image = "0.23"
