[package]
name = "mcping"
version = "0.2.0"
license = "MIT OR Apache-2.0"
authors = ["Scetch <me@scet.ch>", "Cldfire <cldfire3@gmail.com>"]
description = "Implementation of the Server List Ping (SLP) part of the Minecraft Modern protocol"
keywords = ["minecraft", "ping", "server", "serverlistping", "status"]
categories = ["api-bindings", "game-development", "network-programming"]
repository = "https://github.com/Scetch/mcping"
edition = "2018"
readme = "README.md"

[dependencies]
byteorder = "1"
rand = "0.8"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "1"
trust-dns-resolver = "0.20"

[dev-dependencies]
dialoguer = "0.7"
mc-legacy-formatting = "0.3"
viuer = "0.2"
base64 = "0.13"
image = "0.23"
